# DebugLantern

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  PROTOCOL.md  README.md  REQUIREMENTS.md  USAGE.md  debuglantern.service
.github/workflows/: release.yml
src/: common.cpp  common.h  debuglanternctl.cpp  debuglanternd.cpp  webui.cpp  webui.h
